[package]
name = "brs"
version = "0.1.0"
authors = ["ns <portification@gmail.com>"]
edition = "2018"
description = "Read and write Brickadia save files."
readme = "README.md"
keywords = ["brickadia", "parser", "file", "binary", "node", "javascript"]
categories = ["encoding"]
license = "MIT"

[dependencies]
brs = { git = "https://github.com/CheezBarger/brs" }
wasm-bindgen = {version = "^0.2", features = ["serde-serialize"]}