[package]
name = "brs"
version = "0.0.3"
authors = ["Jakub Łabor <jacob.labor@gmail.com>"]
edition = "2018"
description = "Read and write Brickadia saves using node.js and WebAssembly."
readme = "README.md"
keywords = ["brickadia", "parser", "file", "binary", "node", "javascript"]
categories = ["encoding"]
license = "MIT"

[dependencies]
brs = { git = "https://github.com/CheezBarger/brs" }
wasm-bindgen = {version = "^0.2", features = ["serde-serialize"]}