[package]
name = "brs"
version = "0.1.1"
authors = ["Jakub Łabor <jacob.labor@gmail.com>"]
edition = "2018"
description = "Read and write Brickadia saves using node.js and WebAssembly."
readme = "README.md"
keywords = ["brickadia", "parser", "file", "binary", "node", "javascript"]
categories = ["encoding"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
brs = { git = "https://github.com/CheezBarger/brs" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.1.3"